--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   },
   "homepage": "https://github.com/ralake/sports_ladder",
   "dependencies": {
-    "express": "^4.10.7"
+    "express": "^4.10.7",
+    "mongodb": "^1.4.27",
+    "mongoose": "^3.8.21"
   },
   "devDependencies": {
     "casper-chai": "^0.2.1",
