--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/ralake/sports_ladder",
   "dependencies": {
+    "body-parser": "^1.10.1",
     "express": "^4.10.7",
     "mongodb": "^1.4.27",
     "mongoose": "^3.8.21"
