--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "grunt-mocha-test": "^0.12.4",
     "mocha": "^2.1.0",
     "mocha-casperjs": "^0.5.3",
-    "phantomjs": "^1.9.13"
+    "phantomjs": "^1.9.13",
+    "should": "^4.4.2"
   }
 }
