--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/ralake/sports_ladder",
   "dependencies": {
     "body-parser": "^1.10.1",
+    "bower": "^1.3.12",
     "express": "^4.10.7",
     "mongodb": "^1.4.27",
     "mongoose": "^3.8.21"
