--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "grunt-express-server": "^0.4.19",
     "grunt-mocha-casperjs": "^1.4.1",
     "grunt-mocha-test": "^0.12.4",
+    "hippie": "^0.3.0",
     "mocha": "^2.1.0",
     "mocha-casperjs": "^0.5.3",
     "phantomjs": "^1.9.13",
