--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "chai": "^1.10.0",
     "grunt": "^0.4.5",
     "grunt-contrib-jshint": "^0.10.0",
+    "grunt-env": "^0.4.2",
+    "grunt-execute": "^0.2.2",
     "grunt-express-server": "^0.4.19",
     "grunt-mocha-casperjs": "^1.4.1",
     "grunt-mocha-test": "^0.12.4",
