--- a/package.json
+++ b/package.json
@@ -36,6 +36,11 @@
     "grunt-mocha-casperjs": "^1.4.1",
     "grunt-mocha-test": "^0.12.4",
     "hippie": "^0.3.0",
+    "jasmine-core": "^2.1.3",
+    "karma": "^0.12.31",
+    "karma-chrome-launcher": "^0.1.7",
+    "karma-jasmine": "^0.3.4",
+    "karma-phantomjs-launcher": "^0.1.4",
     "mocha": "^2.1.0",
     "mocha-casperjs": "^0.5.3",
     "phantomjs": "^1.9.13",
